2007-11-14  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/patch.m: Handle arg may also be hggroup object.
	Use ancestor to find parent axes object.

2007-11-14  David Bateman  <dbateman@free.fr>

	* plot/__contour__.m: Treat unclosed contours by adding NaN to
	flag to patch that it is not closed. Allow z to take string
	arguments and use it to flag that the contours are placed at the
	z level of the contour itself.
	* plot/__go_draw_axes__.m: Treat hidden line removal in patch
	objects as well. Let hidden removal take precedence in case of a
	conflict.
	* plot/surface.m: Allow surface to treat handles being passed or
	returned. Any additional arguments arr used to set the surface
	handle.
	* plot/contour3.m: New function
	* plot/Makefile.in (SOURCES): Add it to the sources.

2007-11-14  John W. Eaton  <jwe@octave.org>

	* specfun/bessel.m: Update doc string from
	src/DLD-FUNCTIONS/besselj.cc.

2007-11-12  David Bateman  <dbateman@free.fr>

	* plot/contour.m: Allow handles to be passed and returned. Split
	the countour function itself into __contour__.m to be shared with
	surfc and meshc.
	* plot/__contour__.m: New file
	* plot/Makefile.in (SOURCES): Add it to the sources.
	* plot/__go_draw_axes.m: For patch objects don't attempt to patch
	the face or edge if the facecolor or edge color are marked as
	"none". Allow the edgecolor to be determined by the cdata in the
	same manner as the facecolor. Fail if facecolor is not "none" and
	a 3-D plot is desired, rather than ignoring zdata. Make the
	storage of 3D/4D data consistent between line, surface and patch 
	objects.
	* plot/meshc.m: Use new __contour__.m to plot the contours.
	* plot/surfc.m: Use new __contour__.m to plot the contours.

	* plot/__go_draw_axes__.m (get_fontname_and_size):
	Handle fontweight and fontangle properties.

2007-11-12  Kai Habel  <kai.habel@gmx.de>

	* plot/spinmap.m, plot/ribbon.m: New functions.
	* plot/Makefile.in (SOURCES): Add them to the list.
